--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navyblue);
+  padding: 24px 0;
 }
 
 .benefits-section .item .heading {
@@ -297,7 +298,8 @@ img {
 }
 
 .doing-section .second-heading {
-  margin-bottom: 72px;
+  margin: 72px;
+  text-align: center;
 }
 
 .doing-section .list {
@@ -305,8 +307,8 @@ img {
   gap: 24px;
 }
 
-.doing-section .list.item {
-  width: calc((100% - 48px) / 3);
+.doing-section .list .item {
+  width: calc((100% - 72px) / 3);
 }
 
 .team-section {
@@ -315,6 +317,7 @@ img {
 
 .team-section .second-heading {
   margin-bottom: 72px;
+  text-align: center;
 }
 
 .team-section .list {
@@ -324,6 +327,7 @@ img {
 
 .team-section .list .item {
   width: calc((100% - 72px) / 4);
+  border: 0 0 4px 4px;
   background: var(--white);
 }
 
@@ -333,6 +337,7 @@ img {
 
 .team-section .thitd-heading {
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .team-section .paragraph {
@@ -378,7 +383,7 @@ button:focus {
 
 .portfolio-content .text-container {
   padding: 32px 16px;
-  border: 1px solid --cornflower;
+  border: 1px solid #e7e9fc;
   border-top: none;
   margin-bottom: 8px;
 }
