--- a/css/styles.css
+++ b/css/styles.css
@@ -16,14 +16,13 @@ body {
 }
 
 .logo {
-  display: inline-block;
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--iris);
+  font-size: 0;
 }
 
 .link {
@@ -126,8 +125,14 @@ body {
   margin-bottom: 16px;
 }
 
-.page-footer .logo-accent {
+.page-footer .logo .general {
+  color: var(--iris);
+  font-size: 18px;
+}
+
+.page-footer .logo .accent {
   color: var(--cloud);
+  font-size: 18px;
 }
 
 .page-footer .paragraph {
@@ -194,6 +199,7 @@ p {
 
 .second-heading {
   font-size: 36px;
+  font-weight: 500;
   line-height: 1.11;
   letter-spacing: 0.02em;
   color: var(--navyblue);
@@ -201,6 +207,7 @@ p {
 
 .thitd-heading {
   font-size: 20px;
+  font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--navyblue);
@@ -246,8 +253,14 @@ img {
   margin-right: 76px;
 }
 
-.nav-section .logo-accent {
+.nav-section .logo .general {
+  color: var(--iris);
+  font-size: 18px;
+}
+
+.nav-section .logo .accent {
   color: var(--navyblue);
+  font-size: 18px;
 }
 
 .nav-section .list {
@@ -274,13 +287,12 @@ img {
   padding: 24px 0;
 }
 
-.benefits-section .item .heading {
+.benefits-section .item .thitd-heading {
   margin-bottom: 8px;
 }
 
 .benefits-section .item .paragraph {
   color: var(--slate);
-  margin-bottom: 8px;
 }
 
 .benefits-section {
@@ -301,7 +313,7 @@ img {
 }
 
 .doing-section .second-heading {
-  margin: 72px;
+  margin-bottom: 72px;
   text-align: center;
 }
 
@@ -316,6 +328,7 @@ img {
 
 .team-section {
   padding: 120px 0;
+  background-color: var(--cloud);
 }
 
 .team-section .second-heading {
@@ -388,7 +401,6 @@ button:focus {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
 }
 
 .portfolio-content .thitd-heading {
